--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="there should be a lion here"
+      />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="there should be a lion here"
+      title="watch out!"
+    />
   </body>
 </html>
